--- a/_notebooks/2025-08-21-github_pages_jokes.ipynb
+++ b/_notebooks/2025-08-21-github_pages_jokes.ipynb
@@ -44,14 +44,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "c5ab8476",
    "metadata": {
     "vscode": {
      "languageId": "javascript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "\nvar compsci_joke_list = [\n    { joke: \"Why do programmers prefer dark mode? Because light attracts bugs.\", complexity: \"1\" },\n    { joke: \"Why do Java developers wear glasses? Because they don't see sharp.\", complexity: \"2\" },\n    { joke: \"How many programmers does it take to change a light bulb? None, that's a hardware problem.\", complexity: \"1\" },\n    { joke: \"Why do Python programmers prefer snake_case? Because they can't C.\", complexity: \"2\" },\n    { joke: \"Why was the JavaScript developer sad? Because he didn't know how to 'null' his feelings.\", complexity: \"3\" },\n    { joke: \"Why do programmers always mix up Christmas and Halloween? Because Oct 31 == Dec 25.\", complexity: \"3\" },\n    { joke: \"Why did the programmer quit his job? Because he didn't get arrays.\", complexity: \"O(n)\" },\n    { joke: \"Why do Linux programmers prefer using the terminal? Because they don't like Windows.\", complexity: \"1\" },\n];\nvar randomIndex = Math.floor(Math.random() * compsci_joke_list.length);\nvar selectedJoke = compsci_joke_list[randomIndex];\nconsole.log(\"Joke #\" + (randomIndex + 1) + \": \" + selectedJoke.joke + \" (Complexity: \" + selectedJoke.complexity + \")\");\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%javascript\n",
     "\n",
@@ -82,14 +93,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "47a6b112",
    "metadata": {
     "vscode": {
      "languageId": "javascript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "\nvar accounting_joke_list = [\n    \"Why did the accountant cross the road? To bore the people on the other side.\",\n    \"What do accountants do when they're constipated? They work it out with a pencil.\",\n    \"How does an accountant stay out of debt? He learns to act his wage.\",\n    \"Why did the accountant stare at his glass of orange juice for three hours? Because on the box it said 'concentrate'.\",\n    \"Why did the accountant get promoted? Because he knew how to balance his work and play.\",\n    \"Why did the accountant go broke? Because he lost his balance.\",\n    \"Why did the accountant get a job at the bakery? Because he was good at making dough.\",\n    \"Why did the accountant get a job at the zoo? Because he was good with cheetahs.\",\n    \"Why did the accountant get a job at the library? Because he was good at keeping books.\",\n    \"Why did the accountant get a job at the circus? Because he was good at juggling numbers.\",\n    \"Why did the accountant get a job at the gym? Because he was good at working out the numbers.\",\n    \"Why did the accountant get a job at the farm? Because he was good at counting the chickens before they hatched.\"\n]\nvar randomIndex = Math.floor(Math.random() * accounting_joke_list.length);\nconsole.log(\"Joke #\" + (randomIndex + 1) + \": \" + accounting_joke_list[randomIndex]);\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%javascript\n",
     "\n",
@@ -121,14 +143,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "b2d2c9ee",
    "metadata": {
     "vscode": {
      "languageId": "javascript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div style=\"text-align:center; padding:20px;\">\n",
+       "    <h3>🎓 CS Joke Machine 🎓</h3>\n",
+       "    <div id=\"joke_box\" style=\"font-size:18px; font-family:monospace; margin:20px; padding:15px; border-radius:12px; background:#222; color:#ffd700; min-height:60px; transition:background 0.5s;\">\n",
+       "        Click the button for a joke!\n",
+       "    </div>\n",
+       "    <button onclick=\"showJoke()\" style=\"padding:10px 20px; font-size:16px; border:none; border-radius:8px; background:#4CAF50; color:white; cursor:pointer;\">Tell me a Joke 😄</button>\n",
+       "</div>\n",
+       "\n",
+       "<script>\n",
+       "var cs_jokes = [\n",
+       "    { joke: \"Why was the computer cold? Because it left its Windows open.\", topic: \"Operating Systems\" },\n",
+       "    { joke: \"Why did the student eat his homework? Because the teacher said it was a piece of cake.\", topic: \"School\" },\n",
+       "    { joke: \"Why do computers love snacks? Because they love microchips.\", topic: \"Hardware\" },\n",
+       "    { joke: \"What’s a computer’s favorite type of music? Algorithms and blues.\", topic: \"Algorithms\" },\n",
+       "    { joke: \"Why was the math book sad? Because it had too many problems.\", topic: \"Math\" },\n",
+       "    { joke: \"Why don’t robots ever get lost? Because they follow their GPS perfectly.\", topic: \"AI\" },\n",
+       "    { joke: \"What did the computer say to the keyboard? You’re my type!\", topic: \"Hardware\" },\n",
+       "    { joke: \"Why do programmers always carry a pencil? In case they need to draw a byte.\", topic: \"Programming\" }\n",
+       "];\n",
+       "\n",
+       "function typeWriter(text, elementId, i=0) {\n",
+       "    if (i < text.length) {\n",
+       "        document.getElementById(elementId).innerHTML += text.charAt(i);\n",
+       "        setTimeout(() => typeWriter(text, elementId, i + 1), 40);\n",
+       "    }\n",
+       "}\n",
+       "\n",
+       "function showJoke() {\n",
+       "    var randomIndex = Math.floor(Math.random() * cs_jokes.length);\n",
+       "    var jokeObj = cs_jokes[randomIndex];\n",
+       "\n",
+       "    // change box color randomly\n",
+       "    var colors = [\"#222\",\"#333\",\"#2a2a2a\",\"#111\"];\n",
+       "    document.getElementById(\"joke_box\").style.background = colors[Math.floor(Math.random() * colors.length)];\n",
+       "\n",
+       "    // clear and add typing effect\n",
+       "    var box = document.getElementById(\"joke_box\");\n",
+       "    box.innerHTML = \"\";\n",
+       "    var text = \"💡 [\" + jokeObj.topic + \"] \" + jokeObj.joke;\n",
+       "    typeWriter(text, \"joke_box\");\n",
+       "}\n",
+       "</script>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%%html\n",
     "<div style=\"text-align:center; padding:20px;\">\n",
@@ -265,7 +341,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv (3.13.7)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -279,7 +355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
