--- a/_notebooks/2025-08-21-github_pages_jokes.ipynb
+++ b/_notebooks/2025-08-21-github_pages_jokes.ipynb
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "c5ab8476",
    "metadata": {
     "vscode": {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "b2d2c9ee",
    "metadata": {
     "vscode": {
@@ -263,14 +263,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "403c2f70",
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1;36m\n",
+      "==============================================\n",
+      " 🚀  Environment Version Check Dashboard  🚀 \n",
+      "==============================================\n",
+      "\u001b[0m\n",
+      "\u001b[1;33m▶ Command:\u001b[0m \u001b[1;34mpython --version\u001b[0m\n",
+      "\u001b[0;32mOutput:\u001b[0m\n",
+      "----------------------------------------------\n",
+      "Python 3.12.3\n",
+      "\u001b[1;36m----------------------------------------------\u001b[0m\n",
+      "\n",
+      "\u001b[1;33m▶ Command:\u001b[0m \u001b[1;34mjupyter --version\u001b[0m\n",
+      "\u001b[0;32mOutput:\u001b[0m\n",
+      "----------------------------------------------\n",
+      "Selected Jupyter core packages...\n",
+      "IPython          : 8.20.0\n",
+      "ipykernel        : 6.29.3\n",
+      "ipywidgets       : 8.1.1\n",
+      "jupyter_client   : 7.4.9\n",
+      "jupyter_core     : 5.3.2\n",
+      "jupyter_server   : not installed\n",
+      "jupyterlab       : not installed\n",
+      "nbclient         : 0.8.0\n",
+      "nbconvert        : 6.5.3\n",
+      "nbformat         : 5.9.1\n",
+      "notebook         : 6.4.12\n",
+      "qtconsole        : not installed\n",
+      "traitlets        : 5.5.0\n",
+      "\u001b[1;36m----------------------------------------------\u001b[0m\n",
+      "\n",
+      "\u001b[1;33m▶ Command:\u001b[0m \u001b[1;34mjupyter kernelspec list\u001b[0m\n",
+      "\u001b[0;32mOutput:\u001b[0m\n",
+      "----------------------------------------------\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "usage: jupyter [-h] [--version] [--config-dir] [--data-dir] [--runtime-dir]\n",
+      "               [--paths] [--json] [--debug]\n",
+      "               [subcommand]\n",
+      "\n",
+      "Jupyter: Interactive Computing\n",
+      "\n",
+      "positional arguments:\n",
+      "  subcommand     the subcommand to launch\n",
+      "\n",
+      "options:\n",
+      "  -h, --help     show this help message and exit\n",
+      "  --version      show the versions of core jupyter packages and exit\n",
+      "  --config-dir   show Jupyter config dir\n",
+      "  --data-dir     show Jupyter data dir\n",
+      "  --runtime-dir  show Jupyter runtime dir\n",
+      "  --paths        show all Jupyter paths. Add --json for machine-readable\n",
+      "                 format.\n",
+      "  --json         output paths as machine-readable json\n",
+      "  --debug        output debug information about paths\n",
+      "\n",
+      "Available subcommands: bundlerextension execute migrate nbextension notebook\n",
+      "serverextension troubleshoot\n",
+      "\n",
+      "Jupyter command `jupyter-kernelspec` not found.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1;36m----------------------------------------------\u001b[0m\n",
+      "\n",
+      "\u001b[0;32m✅ Version check complete!\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "%%script bash\n",
     "\n",
