--- a/_notebooks/_notebooks/CSA/snake_lessons/2025-09-15-game_programming_fundamentals.ipynb
+++ b/_notebooks/_notebooks/CSA/snake_lessons/2025-09-15-game_programming_fundamentals.ipynb
@@ -75,17 +75,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "821801e5",
    "metadata": {
     "vscode": {
      "languageId": "javascript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/javascript": "const BLOCK = 10; // one grid square size is 10x10 pixels\nconst SCREEN_SNAKE = 0; // play screen\nconst SCREEN_MENU = -1;\nconst SCREEN_GAME_OVER = 1;\nconst SCREEN_SETTING = 2;\n\n// HTML elements / canvas\nconst canvas = document.getElementById(\"snake\");\nconst ctx = canvas.getContext(\"2d\");\n\n// Game state VARIABLES (these change while you play)\nlet SCREEN = SCREEN_MENU;\nlet snake;              // array of pieces\nlet snake_dir;          // current direction (0 up, 1 right, 2 down, 3 left)\nlet snake_next_dir;     // the direction we will turn to next\nlet snake_speed;        // how fast the loop runs (ms)\nlet food = {x: 0, y: 0};// object with x,y\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "// CONSTANTS (names in ALL_CAPS by convention)\n",
-    "const BLOCK = 10;       // one grid square is 10x10 pixels\n",
+    "%%javascript\n",
+    "const BLOCK = 10; // one grid square size is 10x10 pixels\n",
     "const SCREEN_SNAKE = 0; // play screen\n",
     "const SCREEN_MENU = -1;\n",
     "const SCREEN_GAME_OVER = 1;\n",
@@ -101,9 +112,7 @@
     "let snake_dir;          // current direction (0 up, 1 right, 2 down, 3 left)\n",
     "let snake_next_dir;     // the direction we will turn to next\n",
     "let snake_speed;        // how fast the loop runs (ms)\n",
-    "let food = {x: 0, y: 0};// object with x,y\n",
-    "let score;              // number\n",
-    "let wall;               // 1 = on, 0 = off\n"
+    "let food = {x: 0, y: 0};// object with x,y"
    ]
   },
   {
@@ -481,8 +490,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
