added notebook things

--- a/_notebooks/_notebooks/CSA/snake_lessons/2025-09-15-game_programming_fundamentals.ipynb
+++ b/_notebooks/_notebooks/CSA/snake_lessons/2025-09-15-game_programming_fundamentals.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "821801e5",
    "metadata": {
     "vscode": {
@@ -85,7 +85,7 @@
    "outputs": [
     {
      "data": {
-      "application/javascript": "const BLOCK = 50; // one grid square size is 50x50 pixels\nconst SCREEN_SNAKE = 0; // play screen\nconst SCREEN_MENU = -1;\nconst SCREEN_GAME_OVER = 1;\nconst SCREEN_SETTING = 2;\n\n// HTML elements / canvas\nconst canvas = document.getElementById(\"snake\");\nconst ctx = canvas.getContext(\"2d\");\n\n// Game state VARIABLES (these change while you play)\nlet SCREEN = SCREEN_MENU;\nlet snake;              // array of pieces\nlet snake_dir;          // current direction (0 up, 1 right, 2 down, 3 left)\nlet snake_next_dir;     // the direction we will turn to next\nlet snake_speed;        // how fast the loop runs (ms)\nlet food = {x: 0, y: 0};// object with x,y\n",
+      "application/javascript": "const BLOCK =1000; // one grid square size is 1000x1000 pixels\nconst SCREEN_SNAKE = 0; // play screen\nconst SCREEN_MENU = -1;\nconst SCREEN_GAME_OVER = 1;\nconst SCREEN_SETTING = 2;\n\n// HTML elements / canvas\nconst canvas = document.getElementById(\"snake\");\nconst ctx = canvas.getContext(\"2d\");\n\n// Game state VARIABLES (these change while you play)\nlet SCREEN = SCREEN_MENU;\nlet snake;              // array of pieces\nlet snake_dir;          // current direction (0 up, 1 right, 2 down, 3 left)\nlet snake_next_dir;     // the direction we will turn to next\nlet snake_speed;        // how fast the loop runs (ms)\nlet food = {x: 0, y: 0};// object with x,y\n",
       "text/plain": [
        "<IPython.core.display.Javascript object>"
       ]
@@ -96,7 +96,7 @@
    ],
    "source": [
     "%%javascript\n",
-    "const BLOCK = 50; // one grid square size is 50x50 pixels\n",
+    "const BLOCK =1000; // one grid square size is 1000x1000 pixels\n",
     "const SCREEN_SNAKE = 0; // play screen\n",
     "const SCREEN_MENU = -1;\n",
     "const SCREEN_GAME_OVER = 1;\n",
@@ -183,14 +183,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "34dfd725",
    "metadata": {
     "vscode": {
      "languageId": "javascript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2518302066.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[7], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    // 0 up, 1 right, 2 down, 3 left\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "// 0 up, 1 right, 2 down, 3 left\n",
     "switch(snake_dir){\n",
@@ -494,18 +503,6 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.12.3"
   }
  },
  "nbformat": 4,
