--- a/_notebooks/_notebooks/CSA/snake_lessons/2025-09-15-game_programming_fundamentals.ipynb
+++ b/_notebooks/_notebooks/CSA/snake_lessons/2025-09-15-game_programming_fundamentals.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "821801e5",
    "metadata": {
     "vscode": {
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "34dfd725",
    "metadata": {
     "vscode": {
@@ -192,15 +192,18 @@
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (2518302066.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[7], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    // 0 up, 1 right, 2 down, 3 left\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "application/javascript": "// 0 up, 1 right, 2 down, 3 left\nswitch(snake_dir){\n  case 0: _y--; break;\n  case 1: _x++; break;\n  case 2: _y++; break;\n  case 3: _x--; break;\n}\n",
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
+    "%%javascript\n",
     "// 0 up, 1 right, 2 down, 3 left\n",
     "switch(snake_dir){\n",
     "  case 0: _y--; break;\n",
@@ -229,6 +232,7 @@
    },
    "outputs": [],
    "source": [
+    "%%javascript\n",
     "switch(key) {\n",
     "  case 37: if (snake_dir !== 1) snake_next_dir = 3; break; // left\n",
     "  case 38: if (snake_dir !== 2) snake_next_dir = 0; break; // up\n",
@@ -258,6 +262,7 @@
    },
    "outputs": [],
    "source": [
+    "%%javascript\n",
     "// Walls on? Out of bounds = game over\n",
     "if (wall === 1) {\n",
     "  if (snake[0].x < 0 || snake[0].x === canvas.width / BLOCK ||\n",
@@ -299,6 +304,7 @@
    },
    "outputs": [],
    "source": [
+    "%%javascript\n",
     "// at the end of mainLoop\n",
     "setTimeout(mainLoop, snake_speed);"
    ]
@@ -324,6 +330,7 @@
    },
    "outputs": [],
    "source": [
+    "%%javascript\n",
     "for (let i = 0; i < snake.length; i++) {\n",
     "  // fix x and y to wrap across edges\n",
     "}"
@@ -348,6 +355,7 @@
    },
    "outputs": [],
    "source": [
+    "%%javascript\n",
     "for (let i = 1; i < snake.length; i++) {\n",
     "  if (snake[0].x === snake[i].x && snake[0].y === snake[i].y) { /* game over */ }\n",
     "}  "
@@ -372,6 +380,7 @@
    },
    "outputs": [],
    "source": [
+    "%%javascript\n",
     "for (let i = 0; i < snake.length; i++){\n",
     "  activeDot(snake[i].x, snake[i].y);\n",
     "}\n"
@@ -396,6 +405,7 @@
    },
    "outputs": [],
    "source": [
+    "%%javascript\n",
     "for (let i = 0; i < speed_setting.length; i++){\n",
     "  speed_setting[i].addEventListener(\"click\", function(){ /* ... */ });\n",
     "}"
@@ -428,6 +438,7 @@
    },
    "outputs": [],
    "source": [
+    "%%javascript\n",
     "snake = [];\n",
     "snake.push({x: 0, y: 15}); // head at start\n",
     "// later…\n",
@@ -457,6 +468,7 @@
    },
    "outputs": [],
    "source": [
+    "%%javascript\n",
     "let food = { x: 0, y: 0 };\n",
     "\n",
     "function addFood(){\n",
@@ -503,6 +515,18 @@
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
