fixed button hopefully

--- a/_posts/games/games/pong 1/2025-08-20-PongGame.md
+++ b/_posts/games/games/pong 1/2025-08-20-PongGame.md
@@ -1,12 +1,10 @@
 ---
 layout: post
-title: 🏓 Complete Pong Game Code Implementation
-description: Complete HTML, CSS, and JavaScript code for building a fully functional 2-player Pong game
-categories: ['Game Development', 'JavaScript', 'Canvas API', 'Code Implementation']
+title: 🏓 Pong Game
+description: The first ever game created! A classic Pong game built with JavaScript and Canvas API, featuring two-player controls, scoring, and dynamic ball behavior.
 permalink: /custompong
 menu: nav/tools_setup.html
-toc: True
-comments: True
+toc: False
 ---
 
 ## 🎮 Pong Game
