made grid 6x6 and fixed other errors :]

--- a/_posts/2025-12-14-memory.md
+++ b/_posts/2025-12-14-memory.md
@@ -7,9 +7,8 @@ permalink: /javascript/project/memory
 <style>
     .memoryCanvas { 
         border: 10px solid #000;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
+        width: 100%;
+        height: auto;
     }
     
     h2 {
@@ -142,7 +141,7 @@ if (window.trustedTypes && !trustedTypes.createPolicy('default')) {
     function drawEmojis(cols, rows, emojis) {
         const cellWidth = memCanvas.width / cols;
         const cellHeight = memCanvas.height / rows;
-        memCtx.font = `${Math.floor(Math.min(cellWidth, cellHeight) * 0.6)}px serif`;
+        memCtx.font = `${Math.floor(Math.min(cellWidth, cellHeight) * 0.7)}px serif`;
         memCtx.textAlign = "center";
         memCtx.textBaseline = "middle";
 
@@ -158,14 +157,15 @@ if (window.trustedTypes && !trustedTypes.createPolicy('default')) {
         }
     }
 
-    drawGrid(5, 5); // Draw the grid
+    drawGrid(6, 6); // Draw the grid
 
     // Prepare emoji pairs and shuffle
     const baseEmojis = [
-        "⚜️", "🎉", "🏵️", "🌺", "🌟", "🪉", "☀️", "🦄", "💝", "💥"
-    ];
-    // Duplicate emojis for pairs (20 cells, 10 pairs)
-    const emojiList = [...baseEmojis, ...baseEmojis];
+  "⚜️", "🎉", "🏵️", "🌺", "🌟", "🪉", "☀️", "🦄", "💝",
+  "💥", "🍀", "🧩", "🎈", "🕊️", "🎮", "🧠", "🌌", "🎭"
+];
+const emojiList = [...baseEmojis, ...baseEmojis]; // 36 total
+shuffle(emojiList);
 
     // Shuffle the emoji list so pairs are random
     function shuffle(array) {
@@ -192,15 +192,15 @@ if (window.trustedTypes && !trustedTypes.createPolicy('default')) {
         }
     }
     // Show all emojis for 3 seconds, then hide them
-    setTimeout(() => hideEmojis(5, 5), 3000);
+    setTimeout(() => hideEmojis(6, 6), 3000);
 
     // Reveals the emoji at a specific cell
     function revealEmojiAt(col, row, emojis) {
-        const cellWidth = memCanvas.width / 4;
-        const cellHeight = memCanvas.height / 4;
+        const cellWidth = memCanvas.width / 6;
+        const cellHeight = memCanvas.height / 6;
         const x = col * cellWidth + cellWidth / 2;
         const y = row * cellHeight + cellHeight / 2;
-        const emojiIndex = row * 4 + col;
+        const emojiIndex = row * 6 + col;
         const emoji = emojis[emojiIndex];
 
         // Draw white background and emoji
@@ -277,7 +277,7 @@ if (window.trustedTypes && !trustedTypes.createPolicy('default')) {
                 }, 800);
             }
         }
-        if(score == 8) {
+        if(score == 18) {
             // Stop timer and handle best time
             if (timerInterval) { clearInterval(timerInterval); timerInterval = null; }
             const finalTime = startTime ? (Date.now() - startTime) / 1000 : 0;
@@ -312,7 +312,7 @@ if (window.trustedTypes && !trustedTypes.createPolicy('default')) {
     });
 
     // Draw all emojis at the start (for initial reveal)
-    drawEmojis(4, 4, emojiList);
+    drawEmojis(6, 6, emojiList);
 
     // Reset high score button handler
     document.querySelector('.resetHigh').addEventListener('click', () => {
