changed cols and rows thingy

--- a/_posts/2025-12-14-memory.md
+++ b/_posts/2025-12-14-memory.md
@@ -192,15 +192,17 @@ shuffle(emojiList);
         }
     }
     // Show all emojis for 3 seconds, then hide them
+    drawgrid(6, 6);
+    drawEmojis(6, 6, emojiList);
     setTimeout(() => hideEmojis(6, 6), 3000);
 
     // Reveals the emoji at a specific cell
     function revealEmojiAt(col, row, emojis) {
-        const cellWidth = memCanvas.width / 6;
-        const cellHeight = memCanvas.height / 6;
+        const cellWidth = memCanvas.width / cols;
+        const cellHeight = memCanvas.height / rows;
         const x = col * cellWidth + cellWidth / 2;
         const y = row * cellHeight + cellHeight / 2;
-        const emojiIndex = row * 6 + col;
+        const emojiIndex = row * cols + col;
         const emoji = emojis[emojiIndex];
 
         // Draw white background and emoji
@@ -225,9 +227,9 @@ shuffle(emojiList);
         const y = event.clientY - rect.top;
 
         // Calculate which cell was clicked
-        const col = Math.floor(x / (memCanvas.width / 4));
-        const row = Math.floor(y / (memCanvas.height / 4));
-        const emojiIndex = row * 4 + col;
+        const col = Math.floor(x / (memCanvas.width / cols));
+        const row = Math.floor(y / (memCanvas.height / rows));
+        const emojiIndex = row * cols + col;
 
         // Prevent clicking already matched or already revealed cell
         if (
@@ -238,7 +240,7 @@ shuffle(emojiList);
         }
 
         // Reveal the clicked emoji
-        const emoji = revealEmojiAt(col, row, emojiList);
+        const emoji = revealEmojiAt(col, row, emojiList 6, 6);
         revealedCells.push({col, row, emoji, emojiIndex});
         clicks += 1;
 
@@ -278,6 +280,7 @@ shuffle(emojiList);
             }
         }
         if(score == 18) {
+            //victory logic - all pairs matched
             // Stop timer and handle best time
             if (timerInterval) { clearInterval(timerInterval); timerInterval = null; }
             const finalTime = startTime ? (Date.now() - startTime) / 1000 : 0;
