fixed more things

--- a/_posts/2025-12-14-memory.md
+++ b/_posts/2025-12-14-memory.md
@@ -192,7 +192,7 @@ shuffle(emojiList);
         }
     }
     // Show all emojis for 3 seconds, then hide them
-    drawgrid(6, 6);
+    drawGrid(6, 6);
     drawEmojis(6, 6, emojiList);
     setTimeout(() => hideEmojis(6, 6), 3000);
 
@@ -221,14 +221,28 @@ shuffle(emojiList);
             return;
         }
 
-        // Get mouse position relative to canvas
-        const rect = memCanvas.getBoundingClientRect();
-        const x = event.clientX - rect.left;
-        const y = event.clientY - rect.top;
+        memCanvas.addEventListener('click', (event) => {
+    const rect = memCanvas.getBoundingClientRect();
 
-        // Calculate which cell was clicked
-        const col = Math.floor(x / (memCanvas.width / cols));
-        const row = Math.floor(y / (memCanvas.height / rows));
+    memCanvas.addEventListener('click', (event) => {
+    const rect = memCanvas.getBoundingClientRect();
+
+    // Scale mouse coords to canvas resolution
+    const scaleX = memCanvas.width / rect.width;
+    const scaleY = memCanvas.height / rect.height;
+
+    const x = (event.clientX - rect.left) * scaleX;
+    const y = (event.clientY - rect.top) * scaleY;
+
+    // Map to grid cell
+    const col = Math.floor(x / (memCanvas.width / canvasCol));
+    const row = Math.floor(y / (memCanvas.height / canvasRow));
+
+    console.log(`Click at (${x}, ${y}) → Cell [${row}, ${col}]`);
+
+    // … then continue with your reveal/match logic
+});
+});
         const emojiIndex = row * cols + col;
 
         // Prevent clicking already matched or already revealed cell
@@ -240,7 +254,7 @@ shuffle(emojiList);
         }
 
         // Reveal the clicked emoji
-        const emoji = revealEmojiAt(col, row, emojiList 6, 6);
+        const emoji = revealEmojiAt(col, row, emojiList);
         revealedCells.push({col, row, emoji, emojiIndex});
         clicks += 1;
 
@@ -273,7 +287,7 @@ shuffle(emojiList);
             } else {
                 // Not matched, hide after short delay
                 setTimeout(() => {
-                    hideEmojis(4, 4);
+                    hideEmojis(6, 6);
                     revealedCells = [];
                     clicks = 0;
                 }, 800);
