changed the cols and rows to GRID_COLS and GRID_ROWS

--- a/_posts/2025-12-14-memory.md
+++ b/_posts/2025-12-14-memory.md
@@ -4,6 +4,9 @@ title: "Memory Game"
 permalink: /javascript/project/memory
 ---
 
+const GRID_COLS = 6;
+const GRID_ROWS = 6;
+
 <style>
     .memoryCanvas { 
         border: 10px solid #000;
@@ -111,7 +114,7 @@ if (window.trustedTypes && !trustedTypes.createPolicy('default')) {
     attemptsDisplay.textContent = attempts;
 
     // Draws the grid lines on the canvas
-    function drawGrid(cols, rows) {
+    function drawGrid(GRID_COLS, GRID_ROWS) {
         memCtx.strokeStyle = '#000';
         memCtx.lineWidth = 10;
 
@@ -138,7 +141,7 @@ if (window.trustedTypes && !trustedTypes.createPolicy('default')) {
     }
 
     // Draws all emojis on the grid (used for initial reveal)
-    function drawEmojis(cols, rows, emojis) {
+    function drawEmojis(GRID_COLS, GRID_ROWS, emojis) {
         const cellWidth = memCanvas.width / cols;
         const cellHeight = memCanvas.height / rows;
         memCtx.font = `${Math.floor(Math.min(cellWidth, cellHeight) * 0.6)}px serif`;
@@ -193,140 +196,127 @@ shuffle(emojiList);
     }
     // Show all emojis for 3 seconds, then hide them
     drawGrid(6, 6);
-    drawEmojis(6, 6, emojiList);
-    setTimeout(() => hideEmojis(6, 6), 3000);
+    drawEmojis(GRID_COLS, GRID_ROWS, emojiList);
+    setTimeout(() => hideEmojis(GRID_COLS, GRID_ROWS), 3000);
 
     // Reveals the emoji at a specific cell
-    function revealEmojiAt(col, row, emojis) {
-        const cellWidth = memCanvas.width / cols;
-        const cellHeight = memCanvas.height / rows;
-        const x = col * cellWidth + cellWidth / 2;
-        const y = row * cellHeight + cellHeight / 2;
-        const emojiIndex = row * cols + col;
-        const emoji = emojis[emojiIndex];
+    function revealEmojiAt(col, row, emojis, cols, rows) {
+    const cellWidth = memCanvas.width / cols;
+    const cellHeight = memCanvas.height / rows;
+    const x = col * cellWidth + cellWidth / 2;
+    const y = row * cellHeight + cellHeight / 2;
+    const emojiIndex = row * cols + col;
+    const emoji = emojis[emojiIndex];
 
-        // Draw white background and emoji
-        memCtx.fillStyle = '#FFFFFF';
-        memCtx.fillRect(col * cellWidth + 5, row * cellHeight + 5, cellWidth - 10, cellHeight - 10);
-        memCtx.fillStyle = '#000000';
-        memCtx.fillText(emoji, x, y);
-        return emoji;
-    }
+    memCtx.fillStyle = '#FFFFFF';
+    memCtx.fillRect(col * cellWidth + 5, row * cellHeight + 5, cellWidth - 10, cellHeight - 10);
+    memCtx.fillStyle = '#000000';
+    memCtx.fillText(emoji, x, y);
 
-    // Handles user clicks on the canvas
-    memCanvas.addEventListener('click', (event) => {
-        // Limit to two revealed cells at a time
-        if (revealedCells.length >= 2) {
-            // Ignore clicks until current pair is processed
-            return;
-        }
+    return emoji;
+}
 
-        memCanvas.addEventListener('click', (event) => {
-    const rect = memCanvas.getBoundingClientRect();
-
-    memCanvas.addEventListener('click', (event) => {
-    const rect = memCanvas.getBoundingClientRect();
+console.log('canvas click fired');
+// Handles user clicks on the canvas
+memCanvas.addEventListener('click', (event) => {
+    // Don’t allow more than 2 revealed at once
+    if (revealedCells.length >= 2) return;
 
     // Scale mouse coords to canvas resolution
+    const rect = memCanvas.getBoundingClientRect();
     const scaleX = memCanvas.width / rect.width;
     const scaleY = memCanvas.height / rect.height;
-
     const x = (event.clientX - rect.left) * scaleX;
     const y = (event.clientY - rect.top) * scaleY;
 
     // Map to grid cell
-    const col = Math.floor(x / (memCanvas.width / canvasCol));
-    const row = Math.floor(y / (memCanvas.height / canvasRow));
+    const cols = 6;
+    const rows = 6;
+    const col = Math.floor(x / (memCanvas.width / cols));
+    const row = Math.floor(y / (memCanvas.height / rows));
+    const emojiIndex = row * cols + col;
 
-    console.log(`Click at (${x}, ${y}) → Cell [${row}, ${col}]`);
+    // Prevent clicking already matched or already revealed cell
+    if (
+        matchedCells.some(cell => cell.col === col && cell.row === row) ||
+        revealedCells.some(cell => cell.col === col && cell.row === row)
+    ) {
+        return;
+    }
 
-    // … then continue with your reveal/match logic
-});
-});
-        const emojiIndex = row * cols + col;
+    console.log(`Click accepted at cell [${row}, ${col}]`);
 
-        // Prevent clicking already matched or already revealed cell
-        if (
-            matchedCells.some(cell => cell.col === col && cell.row === row) ||
-            revealedCells.some(cell => cell.col === col && cell.row === row)
-        ) {
-            return;
-        }
+    // Reveal the clicked emoji
+   const emoji = revealEmojiAt(col, row, emojiList, 6, 6);
+    revealedCells.push({col, row, emoji, emojiIndex});
+    clicks += 1;
 
-        // Reveal the clicked emoji
-        const emoji = revealEmojiAt(col, row, emojiList);
-        revealedCells.push({col, row, emoji, emojiIndex});
-        clicks += 1;
+    // Start timer on first valid click
+    if (startTime === null) {
+        startTime = Date.now();
+        timerInterval = setInterval(() => {
+            const elapsed = (Date.now() - startTime) / 1000;
+            timeDisplay.textContent = elapsed.toFixed(2);
+        }, 100);
+    }
 
-        // Start timer on first valid click
-        if (startTime === null) {
-            startTime = Date.now();
-            timerInterval = setInterval(() => {
-                const elapsed = (Date.now() - startTime) / 1000;
-                timeDisplay.textContent = elapsed.toFixed(2);
-            }, 100);
-        }
+    // If two emojis are revealed, check for a match
+    if (revealedCells.length === 2) {
+        attempts += 1;
+        attemptsDisplay.textContent = attempts;
 
-        // If two emojis are revealed, check for a match
-        if (revealedCells.length === 2) {
-            attempts += 1;
-            attemptsDisplay.textContent = attempts;
-            if (revealedCells[0].emoji === revealedCells[1].emoji) {
-                // Matched, keep revealed and update score
-                score += 1;
-                scoreDisplay.textContent = score;
-                // Update high score if necessary and persist it
-                if (score > highScore) {
-                    highScore = score;
-                    try { localStorage.setItem('memoryHighScore', String(highScore)); } catch (e) {}
-                    highScoreDisplay.textContent = highScore;
-                }
-                matchedCells.push(revealedCells[0], revealedCells[1]);
+        if (revealedCells[0].emoji === revealedCells[1].emoji) {
+            // Matched
+            score += 1;
+            scoreDisplay.textContent = score;
+            if (score > highScore) {
+                highScore = score;
+                try { localStorage.setItem('memoryHighScore', String(highScore)); } catch (e) {}
+                highScoreDisplay.textContent = highScore;
+            }
+            matchedCells.push(revealedCells[0], revealedCells[1]);
+            revealedCells = [];
+            clicks = 0;
+        } else {
+            // Not matched, hide after short delay
+            setTimeout(() => {
+                hideEmojis(cols, rows);
                 revealedCells = [];
                 clicks = 0;
-            } else {
-                // Not matched, hide after short delay
-                setTimeout(() => {
-                    hideEmojis(6, 6);
-                    revealedCells = [];
-                    clicks = 0;
-                }, 800);
-            }
+            }, 800);
         }
-        if(score == 18) {
-            //victory logic - all pairs matched
-            // Stop timer and handle best time
-            if (timerInterval) { clearInterval(timerInterval); timerInterval = null; }
-            const finalTime = startTime ? (Date.now() - startTime) / 1000 : 0;
-            timeDisplay.textContent = finalTime.toFixed(2);
-            if (bestTime === null || finalTime < bestTime) {
-                bestTime = finalTime;
-                try { localStorage.setItem('memoryBestTime', String(bestTime)); } catch (e) {}
-                bestTimeDisplay.textContent = bestTime.toFixed(2);
-            }
-            // Ask for player initials/name (1-10 chars)
-            let playerName = '';
-            try {
-                const raw = prompt('You set a top time! Enter your name/initials (1-10 chars):', '');
-                if (raw !== null) playerName = raw.trim().substring(0, 10);
-            } catch (e) { playerName = ''; }
-            if (!playerName) playerName = '---';
-            const dateStr = new Date().toLocaleDateString();
-            // Update leaderboard (store objects {time, name, date}) and keep top 10
-            try {
-                let lb = JSON.parse(localStorage.getItem('memoryLeaderboard') || '[]');
-                if (!Array.isArray(lb)) lb = [];
-                lb.push({time: finalTime, name: playerName, date: dateStr});
-                lb.sort((a, b) => Number(a.time) - Number(b.time));
-                while (lb.length > 10) lb.pop();
-                localStorage.setItem('memoryLeaderboard', JSON.stringify(lb));
-            } catch (e) {}
-            renderLeaderboard();
-            alert("Congratulations! You've matched all pairs! Time: " + finalTime.toFixed(2) + "s");
-            // reload to restart the game
-            location.reload();
+    }
+
+    // Victory condition: all 18 pairs matched
+    if (score === 18) {
+        if (timerInterval) { clearInterval(timerInterval); timerInterval = null; }
+        const finalTime = startTime ? (Date.now() - startTime) / 1000 : 0;
+        timeDisplay.textContent = finalTime.toFixed(2);
+        if (bestTime === null || finalTime < bestTime) {
+            bestTime = finalTime;
+            try { localStorage.setItem('memoryBestTime', String(bestTime)); } catch (e) {}
+            bestTimeDisplay.textContent = bestTime.toFixed(2);
         }
-    });
+        let playerName = '';
+        try {
+            const raw = prompt('You set a top time! Enter your name/initials (1-10 chars):', '');
+            if (raw !== null) playerName = raw.trim().substring(0, 10);
+        } catch (e) { playerName = ''; }
+        if (!playerName) playerName = '---';
+        const dateStr = new Date().toLocaleDateString();
+        try {
+            let lb = JSON.parse(localStorage.getItem('memoryLeaderboard') || '[]');
+            if (!Array.isArray(lb)) lb = [];
+            lb.push({time: finalTime, name: playerName, date: dateStr});
+            lb.sort((a, b) => Number(a.time) - Number(b.time));
+            while (lb.length > 10) lb.pop();
+            localStorage.setItem('memoryLeaderboard', JSON.stringify(lb));
+        } catch (e) {}
+        renderLeaderboard();
+        alert("Congratulations! You've matched all pairs! Time: " + finalTime.toFixed(2) + "s");
+        location.reload();
+    }
+});
 
     // Draw all emojis at the start (for initial reveal)
     drawEmojis(6, 6, emojiList);
