--- a/_posts/2025-12-14-memory.md
+++ b/_posts/2025-12-14-memory.md
@@ -113,16 +113,33 @@ if (window.trustedTypes && !trustedTypes.createPolicy('default')) {
     scoreDisplay.textContent = score;
     attemptsDisplay.textContent = attempts;
 
+//Track attempts, score, etc.
+attemptsDisplay.textContent = attempts;
+
+//Define grid size once
+const GRID_COLS = 6;
+const GRID_ROWS = 6;
+
+//Get canvas + context
+const memCanvas = document.getElementById('memoryCanvas');
+const memCtx = memCanvas.getContext('2d');
+
+// Now call the function to actually draw the grid
+drawGrid(GRID_COLS, GRID_ROWS);
     // Draws the grid lines on the canvas
-    function drawGrid(GRID_COLS, GRID_ROWS) {
-        memCtx.strokeStyle = '#000';
-        memCtx.lineWidth = 10;
+function drawGrid(cols, rows) {
+    memCtx.strokeStyle = '#000';
+    memCtx.lineWidth = 2; // thinner looks cleaner
 
-        canvasCol = cols;
-        canvasRow = rows;
+    const cellWidth = memCanvas.width / cols;
+    const cellHeight = memCanvas.height / rows;
 
-        const canvasWidth = memCanvas.width;
-        const canvasHeight = memCanvas.height;
+    for (let row = 0; row < rows; row++) {
+        for (let col = 0; col < cols; col++) {
+            memCtx.strokeRect(col * cellWidth, row * cellHeight, cellWidth, cellHeight);
+        }
+    }
+}
 
         // Draw vertical lines
         for (let x = 0; x <= canvasWidth; x += canvasWidth / canvasCol) {
@@ -160,7 +177,8 @@ if (window.trustedTypes && !trustedTypes.createPolicy('default')) {
         }
     }
 
-    drawGrid(6, 6); // Draw the grid
+// Draw the grid immediately
+    drawGrid(GRID_COLS, GRID_ROWS); // Draw the grid
 
     // Prepare emoji pairs and shuffle
     const baseEmojis = [
@@ -177,7 +195,12 @@ shuffle(emojiList);
             [array[i], array[j]] = [array[j], array[i]];
         }
     }
-    shuffle(emojiList);
+
+    // Show all emojis for 3 seconds, then hide them
+    drawEmojis(GRID_COLS, GRID_ROWS, emojiList);
+    setTimeout(() => hideEmojis(GRID_COLS, GRID_ROWS), 3000);
+
+    // --- Helper functions ---
 
     // Covers all cells except matched ones with a gray rectangle
     function hideEmojis(cols, rows) {
@@ -194,10 +217,6 @@ shuffle(emojiList);
             }
         }
     }
-    // Show all emojis for 3 seconds, then hide them
-    drawGrid(6, 6);
-    drawEmojis(GRID_COLS, GRID_ROWS, emojiList);
-    setTimeout(() => hideEmojis(GRID_COLS, GRID_ROWS), 3000);
 
     // Reveals the emoji at a specific cell
     function revealEmojiAt(col, row, emojis, cols, rows) {
@@ -216,9 +235,10 @@ shuffle(emojiList);
     return emoji;
 }
 
-console.log('canvas click fired');
-// Handles user clicks on the canvas
+// --- Click handler ---
 memCanvas.addEventListener('click', (event) => {
+    console.log('canvas click fired');
+
     // Don’t allow more than 2 revealed at once
     if (revealedCells.length >= 2) return;
 
@@ -230,11 +250,16 @@ memCanvas.addEventListener('click', (event) => {
     const y = (event.clientY - rect.top) * scaleY;
 
     // Map to grid cell
-    const cols = 6;
-    const rows = 6;
-    const col = Math.floor(x / (memCanvas.width / cols));
-    const row = Math.floor(y / (memCanvas.height / rows));
-    const emojiIndex = row * cols + col;
+    const cols = col = Math.floor(x / (memCanvas.width / GRID_COLS));
+    const rows = row = Math.floor(y / (memCanvas.height / GRID_ROWS));
+    const emojiIndex = row * GRID_COLS + col;
+
+    // ✅ Now call revealEmojiAt with valid col/row
+   // const emoji = revealEmojiAt(col, row, emojiList, GRID_COLS, GRID_ROWS);
+
+   // revealedCells.push({ col, row, emoji, emojiIndex });
+    // clicks += 1;
+
 
     // Prevent clicking already matched or already revealed cell
     if (
@@ -247,8 +272,8 @@ memCanvas.addEventListener('click', (event) => {
     console.log(`Click accepted at cell [${row}, ${col}]`);
 
     // Reveal the clicked emoji
-   const emoji = revealEmojiAt(col, row, emojiList, 6, 6);
-    revealedCells.push({col, row, emoji, emojiIndex});
+   const emoji = revealEmojiAt(col, row, emojiList, GRID_COLS, GRID_ROWS);
+    revealedCells.push({col, row, emoji, emojiIndex });
     clicks += 1;
 
     // Start timer on first valid click
@@ -280,7 +305,7 @@ memCanvas.addEventListener('click', (event) => {
         } else {
             // Not matched, hide after short delay
             setTimeout(() => {
-                hideEmojis(cols, rows);
+                hideEmojis(GRID_COLS, GRID_ROWS);
                 revealedCells = [];
                 clicks = 0;
             }, 800);
