changed more code and added another mermaid flowchart

--- a/_posts/2025-12-14-memory.md
+++ b/_posts/2025-12-14-memory.md
@@ -4,9 +4,7 @@ title: "Memory Game"
 permalink: /javascript/project/memory
 ---
 
-const GRID_COLS = 6;
-const GRID_ROWS = 6;
-
+// CSS styling 
 <style>
     .memoryCanvas { 
         border: 10px solid #000;
@@ -20,6 +18,7 @@ const GRID_ROWS = 6;
     }
 </style>
 
+// HTML content
 <h2>Memory Game</h2>
 <p>Score: <span class="score"></span></p>
 <p>Attempts: <span class="attempts"></span></p>
@@ -130,10 +129,8 @@ drawGrid(GRID_COLS, GRID_ROWS);
 function drawGrid(cols, rows) {
     memCtx.strokeStyle = '#000';
     memCtx.lineWidth = 2; // thinner looks cleaner
-
     const cellWidth = memCanvas.width / cols;
     const cellHeight = memCanvas.height / rows;
-
     for (let row = 0; row < rows; row++) {
         for (let col = 0; col < cols; col++) {
             memCtx.strokeRect(col * cellWidth, row * cellHeight, cellWidth, cellHeight);
@@ -141,24 +138,8 @@ function drawGrid(cols, rows) {
     }
 }
 
-        // Draw vertical lines
-        for (let x = 0; x <= canvasWidth; x += canvasWidth / canvasCol) {
-            memCtx.beginPath();
-            memCtx.moveTo(x, 0);
-            memCtx.lineTo(x, canvasHeight);
-            memCtx.stroke();
-        }
-        // Draw horizontal lines
-        for (let y = 0; y <= canvasHeight; y += canvasHeight / canvasRow) {
-            memCtx.beginPath();
-            memCtx.moveTo(0, y);
-            memCtx.lineTo(canvasWidth, y);
-            memCtx.stroke();
-        }
-    }
-
     // Draws all emojis on the grid (used for initial reveal)
-    function drawEmojis(GRID_COLS, GRID_ROWS, emojis) {
+    function drawEmojis(cols, rows, emojis) {
         const cellWidth = memCanvas.width / cols;
         const cellHeight = memCanvas.height / rows;
         memCtx.font = `${Math.floor(Math.min(cellWidth, cellHeight) * 0.6)}px serif`;
