actually answered the questions in the JSON lesson

--- a/_notebooks/2026-01-16-json_lesson.ipynb
+++ b/_notebooks/2026-01-16-json_lesson.ipynb
@@ -142,8 +142,8 @@
     "// CODE_RUNNER: Personalize your student record JSON object\n",
     "\n",
     "const student = {\n",
-    "    name: \"Bartholomew\",\n",
-    "    age: 15,\n",
+    "    name: \"Florencia\",\n",
+    "    age: 14,\n",
     "    grade: \"9th\"\n",
     "};\n",
     "\n",
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "ae5398cc",
    "metadata": {
     "vscode": {
@@ -240,21 +240,19 @@
     }
    ],
    "source": [
-    "%%js\n",
-    "\n",
-    "// CODE_RUNNER: Personalize your student record again and parse it from JSON\n",
+    "%%js \n",
     "\n",
     "const jsonData = `\n",
     "{\n",
-    "    \"name\": \"Finn\",\n",
-    "    \"age\": 15,\n",
+    "    \"name\": \"Florencia\",\n",
+    "    \"age\": 14,\n",
     "    \"isStudent\": true\n",
     "}\n",
     "`;\n",
     "\n",
     "\n",
     "const parsedData = JSON.parse(jsonData);\n",
-    "console.log(parsedData);"
+    "console.log(parsedData);\n"
    ]
   },
   {
@@ -349,24 +347,30 @@
    "source": [
     "%%js\n",
     "\n",
-    "// CODE_RUNNER: Create a resume as a JavaScript Object and print to the console as JSON\n",
     "\n",
     "// 1. Create a JavaScript object named `resume` with the following properties:\n",
     "const resume = {\n",
-    "    fullName: \"\", // Add your full name\n",
-    "    email: \"\",    // Add your email\n",
-    "    education: \"\", // Add your grade\n",
+    "    fullName: \"Flora Segale\", // Add your full name\n",
+    "    email: \"non-ya-beezwax@gmail.com\",    // Add your email\n",
+    "    education: \"9th grade\", // Add your grade\n",
     "    address: {     // Nested object\n",
-    "        city: \"\",\n",
-    "        state: \"\",\n",
-    "        country: \"\"\n",
+    "        city: \"San Diego\",\n",
+    "        state: \"California\",\n",
+    "        country: \"United States of America\"\n",
     "    },\n",
-    "    skills: []     // Array of strings\n",
+    "    skills: [ \"drawing\" , \" writing\" , \" reading\" , \" running\" , \" collaborative skils\"]     // Array of strings\n",
     "};\n",
+    "\n",
+    "console.log(resume);\n",
+    "\n",
+    "const jsonString = JSON.stringify(resume);\n",
+    "console.log(jsonString);\n",
+    "\n",
+    "\n",
+    "\n",
     "// 2. Access and display properties for full name, email, and city using dot notation. Look at section 1.\n",
     "// 3. Convert the `resume` JavaScript object into a JSON string and store it in a variable named `jsonString`, then log the JSON string to the console. Look at Section 3.\n",
-    "// 4. Parse the JSON string back into a JavaScript object and store it in a variable named `parsedResume`, then log the object to the console. Look at Section 3.\n",
-    "\n"
+    "// 4. Parse the JSON string back into a JavaScript object and store it in a variable named `parsedResume`, then log the object to the console. Look at Section 3.\n"
    ]
   },
   {
