--- a/_notebooks/2026-01-16-json_lesson.ipynb
+++ b/_notebooks/2026-01-16-json_lesson.ipynb
@@ -345,32 +345,36 @@
    },
    "outputs": [],
    "source": [
-    "%%js\n",
-    "\n",
-    "\n",
     "// 1. Create a JavaScript object named `resume` with the following properties:\n",
     "const resume = {\n",
-    "    fullName: \"Flora Segale\", // Add your full name\n",
-    "    email: \"non-ya-beezwax@gmail.com\",    // Add your email\n",
-    "    education: \"9th grade\", // Add your grade\n",
-    "    address: {     // Nested object\n",
+    "    fullName: \"Flora Segale\",\n",
+    "    email: \"non-ya-beezwax@gmail.com\",\n",
+    "    education: \"9th grade\",\n",
+    "    address: {\n",
     "        city: \"San Diego\",\n",
     "        state: \"California\",\n",
     "        country: \"United States of America\"\n",
     "    },\n",
-    "    skills: [ \"drawing\" , \" writing\" , \" reading\" , \" running\" , \" collaborative skils\"]     // Array of strings\n",
+    "    skills: [\"drawing\", \"writing\", \"reading\", \"running\", \"collaborative skills\"]\n",
     "};\n",
     "\n",
-    "console.log(resume);\n",
+    "console.log(\"Resume object:\", resume);\n",
     "\n",
+    "\n",
+    "// 2. Access and display properties for full name, email, and city using dot notation.\n",
+    "console.log(\"Full Name:\", resume.fullName);\n",
+    "console.log(\"Email:\", resume.email);\n",
+    "console.log(\"City:\", resume.address.city);\n",
+    "\n",
+    "\n",
+    "// 3. Convert the `resume` JavaScript object into a JSON string and store it in `jsonString`\n",
     "const jsonString = JSON.stringify(resume);\n",
-    "console.log(jsonString);\n",
+    "console.log(\"JSON String:\", jsonString);\n",
     "\n",
     "\n",
-    "\n",
-    "// 2. Access and display properties for full name, email, and city using dot notation. Look at section 1.\n",
-    "// 3. Convert the `resume` JavaScript object into a JSON string and store it in a variable named `jsonString`, then log the JSON string to the console. Look at Section 3.\n",
-    "// 4. Parse the JSON string back into a JavaScript object and store it in a variable named `parsedResume`, then log the object to the console. Look at Section 3.\n"
+    "// 4. Parse the JSON string back into a JavaScript object and store it in `parsedResume`\n",
+    "const parsedResume = JSON.parse(jsonString);\n",
+    "console.log(\"Parsed Resume Object:\", parsedResume);"
    ]
   },
   {
@@ -398,7 +402,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
